--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -12,3 +12,35 @@
 .text-white {
   color: #f5f5f5;
 }
+
+.carousel-image {
+  width: 200px;
+}
+
+.own-photo {
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.result {
+  margin-left: 0;
+  width: 100%;
+  margin-top: 5%;
+  height: 100%;
+  opacity: 0.9;
+  z-index: 10;
+  position: absolute;
+  background: #f5f5f5;
+}
+
+.result-td {
+  font-size: 16px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #f5f5f5;
+}
