--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,9 +31,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/custom.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -117,12 +115,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/common/_jquery.min.js"></script>
-    <script src="/js/common/ajaxfileupload.js"></script>
-    <script src="/js/common/bootstrap.min.js"></script>
-    <script src="/js/common/jgestures.min.js"></script>
-    <script src="/js/d-addStar.js"></script>
-    <script src="/js/d-index.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
