ci from docker image

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,9 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/custom.css">
     <!--STYLES END-->
   </head>
 
@@ -115,7 +117,12 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="/js/common/_jquery.min.js"></script>
+    <script src="/js/common/ajaxfileupload.js"></script>
+    <script src="/js/common/bootstrap.min.js"></script>
+    <script src="/js/common/jgestures.min.js"></script>
+    <script src="/js/d-addStar.js"></script>
+    <script src="/js/d-index.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
