call back url modify

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       <h3 class="panel-title"><%=__("Index_Process")%></h3>
     </div>
     <div class="panel-body" align="center">
-      <img src="/images/loading.gif" />
+      <img src="http://cdn.frankzhao.org/static/images/loading.gif" />
     </div>
   </div>
 
