--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
           <li data-target="#starCarousel" data-slide-to="3"></li>
         </ol>
         <!-- 轮播（Carousel）项目 -->
-        <div class="carousel-inner">
+        <div class="carousel-inner" id="carousel-inner">
           <div class="item active" id="item-0">
             <img alt="First slide" class="carousel-image center-block">
             <div class="carousel-caption"></div>
